Made test set in AbstractCellTest Immutable.